:zap: StaticWebServletApplicationContext